--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,20 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "7.0.11",
+    "com.unity.2d.animation": "9.1.0",
     "com.unity.2d.pixel-perfect": "5.0.3",
-    "com.unity.2d.psdimporter": "6.0.7",
+    "com.unity.2d.psdimporter": "8.0.4",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "7.0.7",
+    "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "4.2.1",
+    "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.7",
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.20",
+    "com.unity.ide.rider": "3.0.27",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.3.0",
-    "com.unity.purchasing": "4.9.4",
-    "com.unity.render-pipelines.universal": "12.1.6",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.purchasing": "4.12.2",
+    "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.4",
